Added basic routes and components. Wired up AuthService with api keys so we can start making some api calls.

--- a/src/app/shared/layouts/login-layout/login-layout.component.html
+++ b/src/app/shared/layouts/login-layout/login-layout.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div style="margin: 0 auto; width: 250px;" >
+    <img src="/assets/images/Angular_full_color_logo.png" style="max-width: 100px;"/> <strong>Fitness Tracker</strong>
+  </div>
   <h1>Login Layout</h1>
 
   <router-outlet></router-outlet>
