--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,16 @@
-<p>
-  login works!
-</p>
+<div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" name="username" placeholder="Username" [(ngModel)]="username"/>
+</div>
+
+<div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="password"/>
+</div>
+
+<button class="btn btn-cap" (click)="onSubmit()">Login</button>
+<button class="btn btn-default" routerLink="/auth/forgot">Forgot?</button>
+
+<div style="padding-top: 15px;">
+    <div *ngIf="errorMessage" class="alert alert-danger" role="alert" >{{errorMessage}}</div>
+</div>
