Wired up some forms to be able to edit the data.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
 <h3>Goal</h3>
 <div *ngIf="userFitnessPlan">
-  {{userFitnessPlan.goalWeight}}
+  <p>{{userFitnessPlan.goalWeight}} ({{userFitnessPlan.fitnessPlanType.poundsPerWeek}} lbs/week)</p>
 </div>
 
 
